--- a/test/Data.Extensions.Test/Data.Extensions.Test.fsproj
+++ b/test/Data.Extensions.Test/Data.Extensions.Test.fsproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Appveyor.TestLogger" Version="2.0.0" />
         <PackageReference Include="FluentCast" Version="1.0.2" />
         <PackageReference Include="FsUnit" Version="3.4.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
