--- a/src/Data.Extensions/Data.Extensions.csproj
+++ b/src/Data.Extensions/Data.Extensions.csproj
@@ -1,9 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <PackageId>FluentCast</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Fábio Monteiro Naspolini</Authors>
+        <Company>Fábio Monteiro Naspolini</Company>
+        <Title>Maestria.Data.Extensions</Title>
+        <Description>Extension functions package for IDataReader implementations.</Description>
+        <PackageTags>Data System.Data DbDataReader IDataReader Reader Extensions Fluent Functional</PackageTags>
+        <RepositoryUrl>https://github.com/fabionaspolini/FluentCast</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/MaestriaNet/DataExtensions</PackageProjectUrl>
+        <License>https://github.com/MaestriaNet/DataExtensions/blob/master/LICENSE</License>
+        <PackageIconUrl>https://raw.githubusercontent.com/fabionaspolini/FluentCast/master/resources/icon-96.png</PackageIconUrl>
+    </PropertyGroup>
+    
+    <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <AssemblyName>Maestria.Data.Extensions</AssemblyName>
         <RootNamespace>Maestria.Data.Extensions</RootNamespace>
+        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
 
 </Project>
