--- a/src/Data.Extensions/Data.Extensions.csproj
+++ b/src/Data.Extensions/Data.Extensions.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <PackageId>FluentCast</PackageId>
+        <PackageId>Maestria.Data.Extensions</PackageId>
         <Version>1.0.0</Version>
         <Authors>Fábio Monteiro Naspolini</Authors>
         <Company>Fábio Monteiro Naspolini</Company>
         <Title>Maestria.Data.Extensions</Title>
         <Description>Extension functions package for IDataReader implementations.</Description>
-        <PackageTags>Data System.Data DbDataReader IDataReader Reader Extensions Fluent Functional</PackageTags>
-        <RepositoryUrl>https://github.com/fabionaspolini/FluentCast</RepositoryUrl>
+        <PackageTags>Data System.Data DbDataReader IDataReader Reader DataReaderExtensions Extensions Fluent Functional</PackageTags>
+        <RepositoryUrl>ttps://github.com/MaestriaNet/DataExtensions</RepositoryUrl>
         <PackageProjectUrl>https://github.com/MaestriaNet/DataExtensions</PackageProjectUrl>
         <License>https://github.com/MaestriaNet/DataExtensions/blob/master/LICENSE</License>
-        <PackageIconUrl>https://raw.githubusercontent.com/fabionaspolini/FluentCast/master/resources/icon-96.png</PackageIconUrl>
+        <PackageIconUrl>https://raw.githubusercontent.com/MaestriaNet/DataExtensions/master/resources/icon-96.png</PackageIconUrl>
     </PropertyGroup>
     
     <PropertyGroup>
