--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,14 @@
-version: '1.0.5.{build}'
+version: '1.1.0.{build}'
 image: Visual Studio 2017
 configuration: Release
 dotnet_csproj:
   patch: true
-  file: 'src\Data.Extensions.csproj'
-  version: '1.0.5'
-  package_version: '1.0.5'
-  assembly_version: '1.0.5'
-  file_version: '1.0.5'
-  informational_version: '1.0.5'
+  file: 'src\Extensions.Data.csproj'
+  version: '1.1.0'
+  package_version: '1.1.0'
+  assembly_version: '1.1.0'
+  file_version: '1.1.0'
+  informational_version: '1.1.0'
 before_build:
   - ps: dotnet --version
 build_script:
