--- a/tests/Extensions.Data.Test.fsproj
+++ b/tests/Extensions.Data.Test.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>Maestria.Extensions.Data.Test</AssemblyName>
         <RootNamespace>Maestria.Extensions.Data.Test</RootNamespace>
     </PropertyGroup>
